--- a/R_C14_rates calculation/FvFm.Rmd
+++ b/R_C14_rates calculation/FvFm.Rmd
@@ -18,7 +18,7 @@ colours_cycle <- structure(colours_cycle$colour,.Names=colours_cycle$cycle)
 
 ```{r}
 fvfm <- readxl::read_excel("data_used/TAN1810_SFChla_Nut_ETR.xlsx")  %>%
-  select(CTD_type, U_Cast, Depth, Nominal_depth, Cycle, FvFm2) %>%
+  select(CTD_type, U_Cast, Depth, Exp_time, Nominal_depth, Cycle, FvFm2) %>%
   distinct() %>%
   mutate(cycle_name = recode(Cycle, "1" = "SA1",
                                     "2" = "SA2",
